src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Officer__c</fullName>
        <label>Account Officer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sultan Choudury (900)</fullName>
                </value>
                <value>
                    <fullName>Call Centre Agent (811)</fullName>
                </value>
                <value>
                    <fullName>Call Centre Agent (813)</fullName>
                </value>
                <value>
                    <fullName>Call Centre Agent (823)</fullName>
                </value>
                <value>
                    <fullName>Administration (ADM)</fullName>
                </value>
                <value>
                    <fullName>Finance Department (FIN)</fullName>
                </value>
                <value>
                    <fullName>Treasury Department (TRE)</fullName>
                </value>
                <value>
                    <fullName>Money Market Department (MMT)</fullName>
                </value>
                <value>
                    <fullName>Foreign Exchange Department (FEX)</fullName>
                </value>
                <value>
                    <fullName>Operations Department (OPS)</fullName>
                </value>
                <value>
                    <fullName>Clearing Department (CLE)</fullName>
                </value>
                <value>
                    <fullName>Reconciliations Department (REC)</fullName>
                </value>
                <value>
                    <fullName>Payment Department (PAY)</fullName>
                </value>
                <value>
                    <fullName>Call Centre (CAL)</fullName>
                </value>
                <value>
                    <fullName>Risk Management Department (RMT)</fullName>
                </value>
                <value>
                    <fullName>Trade Finance Department (TRA)</fullName>
                </value>
                <value>
                    <fullName>Credit Department (CRD)</fullName>
                </value>
                <value>
                    <fullName>Internal Audit Department (IAD)</fullName>
                </value>
                <value>
                    <fullName>Compliance Department (COM)</fullName>
                </value>
                <value>
                    <fullName>Marketing Department (MKT)</fullName>
                </value>
                <value>
                    <fullName>Atm request (A09)</fullName>
                </value>
                <value>
                    <fullName>Cortex (COR)</fullName>
                </value>
                <value>
                    <fullName>Operations (002)</fullName>
                </value>
                <value>
                    <fullName>Faraz Khan (801)</fullName>
                </value>
                <value>
                    <fullName>Call Centre Agent (803)</fullName>
                </value>
                <value>
                    <fullName>Call Centre Agent (804)</fullName>
                </value>
                <value>
                    <fullName>Call Centre Agent (805)</fullName>
                </value>
                <value>
                    <fullName>Call Centre Agent (806)</fullName>
                </value>
                <value>
                    <fullName>Call Centre Agent (807)</fullName>
                </value>
                <value>
                    <fullName>Call Centre Agent (808)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Accountant_Firm__c</fullName>
        <label>Accountant Firm</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_Phone__c</fullName>
        <label>Accountant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Accountant_PostCode__c</fullName>
        <label>PostCode</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_Town_City__c</fullName>
        <label>Town/City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accountant_name__c</fullName>
        <label>Accountant name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ack_Form_Needed__c</fullName>
        <defaultValue>&quot;X&quot;</defaultValue>
        <label>Ack Form Needed</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Address_Details__c</fullName>
        <inlineHelpText>Please give details of any properties other than the three above where you have lived in the past 3 years.</inlineHelpText>
        <label>Additional Address Details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_employment_information__c</fullName>
        <label>Additional employment information</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_information_about_fin_details__c</fullName>
        <label>Additional information about fin details</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AffordabilityGrossAnnualIncome__c</fullName>
        <label>AffordabilityGrossAnnualIncome</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <formula>FLOOR((TODAY()-Date_of_Birth__c)/365.2425)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agreed_to_data_protection__c</fullName>
        <label>Agreed to data protection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_financed__c</fullName>
        <label>Amount financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_in_arrears__c</fullName>
        <label>Amount in arrears?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Anticipated_Cash__c</fullName>
        <label>Anticipated Cash</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Anticipated_Cash_amount__c</fullName>
        <label>Anticipated Cash amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Anticipated_cash_frequency__c</fullName>
        <label>Anticipated cash frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Any_other_name_known_by_past_present__c</fullName>
        <label>Any other name known by - past/present</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AppliedMortgageElsewhere__c</fullName>
        <label>Have you applied for another mortgage?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_for_Online_Banking__c</fullName>
        <label>Do you wish to use online banking?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apply_for_Telephone_Banking__c</fullName>
        <label>Apply for Telephone Banking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <default>true</default>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_happy_for_IBB_to_hold_your_data__c</fullName>
        <description>Confirms if the bank can hold the customers data</description>
        <label>Are you happy for us to hold your data?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Are_you_selling_an_existing_property__c</fullName>
        <label>Are you selling an existing property?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_ExistingProperty__c</fullName>
        <label>Are you selling an existing property?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_MortgageOutstanding__c</fullName>
        <label>How much is outstanding on mortgage?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Asset_SellingPrice__c</fullName>
        <label>What is the selling price?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_Properties__c</fullName>
        <label>BTL Properties</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                    <default>true</default>
                    <label>0</label>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_Type__c</fullName>
        <description>Used for NPAA product select page</description>
        <label>Business Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Charity</fullName>
                </value>
                <value>
                    <fullName>Masjid</fullName>
                </value>
                <value>
                    <fullName>Educational Institute</fullName>
                </value>
                <value>
                    <fullName>Club</fullName>
                </value>
                <value>
                    <fullName>Trust</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_an_SPV__c</fullName>
        <description>For use with NPAA build</description>
        <label>Business an SPV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Business_email_address__c</fullName>
        <label>Business email address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_or_Charity_Size__c</fullName>
        <inlineHelpText>For use with Single Customer View Extract. As per description of large &amp; small with companies house/charity commission.</inlineHelpText>
        <label>Business or Charity Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_property_value__c</fullName>
        <label>Business property value?</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Prospects_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Car_Allowance2__c</fullName>
        <label>Car Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Car_Allowance__c</fullName>
        <label>Car Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Card_Name__c</fullName>
        <label>Name to be printed on card</label>
        <length>21</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cash_Credit_and_Debits__c</fullName>
        <label>Cash Credit and Debits?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Channel_lead_orginated__c</fullName>
        <label>Channel where lead identified</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Premier Banking</fullName>
                </value>
                <value>
                    <fullName>Branch Network</fullName>
                </value>
                <value>
                    <fullName>HPP Team</fullName>
                </value>
                <value>
                    <fullName>Call Centre</fullName>
                </value>
                <value>
                    <fullName>Intermediary</fullName>
                </value>
                <value>
                    <fullName>BDM Team</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cheque_book_app_form__c</fullName>
        <formula>IF (Cheque_book_required__c , &quot;Yes&quot; , &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheque book app form</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cheque_book_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cheque book required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cheque_book_required_formula__c</fullName>
        <formula>IF (Cheque_book_required__c , &quot;Y&quot; , &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cheque book required formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company_ant_credit_amount_per_month__c</fullName>
        <description>NPAA</description>
        <label>Company ant credit amount per month</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_ant_debit_amount_per_month__c</fullName>
        <description>NPAA</description>
        <label>Company ant debit amount per month</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_anticipated_turnover__c</fullName>
        <description>NPAA</description>
        <label>Company anticipated turnover</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_had_a_CCJ__c</fullName>
        <label>Company had a CCJ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_had_a_property_reposessed__c</fullName>
        <description>NPAA</description>
        <label>Company had a property reposessed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_had_an_IVA__c</fullName>
        <description>NPAA</description>
        <label>Company had an IVA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Company_has_broken_any_credit_agreements__c</fullName>
        <description>NPAA</description>
        <label>Company has broken any credit agreements</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_By_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact By Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_By_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact By Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_By_Telephone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contact By Telephone</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Details_Last_Update__c</fullName>
        <description>Last date the contact details were updated</description>
        <inlineHelpText>Date the last update of contact details was performed</inlineHelpText>
        <label>Contact Details Last Update</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_s_telephone_number__c</fullName>
        <label>Contact&apos;s telephone number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Converted_Lead__c</fullName>
        <defaultValue>&quot;No&quot;</defaultValue>
        <label>Converted Lead?</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceAddressCity__c</fullName>
        <label>CorrespondenceAddressCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceAddressCountry__c</fullName>
        <label>CorrespondenceAddressCountry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceAddressDistrict__c</fullName>
        <label>CorrespondenceAddressDistrict</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceAddressPostCode__c</fullName>
        <label>CorrespondenceAddressPostCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrespondenceAddressStreet__c</fullName>
        <label>CorrespondenceAddressStreet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryLiablePayTax__c</fullName>
        <label>CountryLiablePayTax</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Antigua &amp; Deps</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>Brunei</fullName>
                </value>
                <value>
                    <fullName>Bulgaria</fullName>
                </value>
                <value>
                    <fullName>Burkina</fullName>
                </value>
                <value>
                    <fullName>Burundi</fullName>
                </value>
                <value>
                    <fullName>Cambodia</fullName>
                </value>
                <value>
                    <fullName>Cameroon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Birth__c</fullName>
        <label>Country of birth</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>(Not Specified)</fullName>
                </value>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Country_of_Issue__c</fullName>
        <label>Country of issue</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bosnia-Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>